--- a/configs/gn_baselines/e2e_mask_rcnn_X_101_FPN_Xconv1fc_2x_gn.yaml
+++ b/configs/gn_baselines/e2e_mask_rcnn_X_101_FPN_Xconv1fc_2x_gn.yaml
@@ -5,15 +5,16 @@ INPUT:
   MAX_SIZE_TEST: 1333
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
-  WEIGHT: "" # no pretrained model
+  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-101-GN"
   BACKBONE:
-    CONV_BODY: "R-50-FPN"
-    FREEZE_CONV_BODY_AT: 0 # finetune all layers
+    CONV_BODY: "R-101-FPN"
   RESNETS: # use GN for backbone
     BACKBONE_OUT_CHANNELS: 256
     STRIDE_IN_1X1: False
     TRANS_FUNC: "BottleneckWithGN"
     STEM_FUNC: "StemWithGN"
+    NUM_GROUPS: 32
+    WIDTH_PER_GROUP: 4
   FPN:
     USE_GN: True # use GN for FPN
   RPN:
@@ -36,17 +37,28 @@ MODEL:
     NUM_STACKED_CONVS: 4
     FEATURE_EXTRACTOR: "FPNXconv1fcFeatureExtractor"
     PREDICTOR: "FPNPredictor"
+  ROI_MASK_HEAD:
+    USE_GN: True # use GN for mask head
+    POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
+    CONV_LAYERS: (256, 256, 256, 256)
+    FEATURE_EXTRACTOR: "MaskRCNNFPNFeatureExtractor"
+    PREDICTOR: "MaskRCNNC4Predictor"
+    POOLER_RESOLUTION: 14
+    POOLER_SAMPLING_RATIO: 2
+    RESOLUTION: 28
+    SHARE_BOX_FEATURE_EXTRACTOR: False
+  MASK_ON: True
 DATASETS:
-  TRAIN: ("coco_2014_train", "coco_2014_valminusminival")
-  TEST: ("coco_2014_minival",)
+  TRAIN: ("coco_2017_train",)
+  TEST: ("coco_2017_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   # Assume 8 gpus
-  BASE_LR: 0.02
+  BASE_LR: 0.005
   WEIGHT_DECAY: 0.0001
-  STEPS: (210000, 250000)
-  MAX_ITER: 270000
-  IMS_PER_BATCH: 16
+  STEPS: (600000, 680000)
+  MAX_ITER: 720000
+  IMS_PER_BATCH: 4
 TEST:
-  IMS_PER_BATCH: 8
+  IMS_PER_BATCH: 4
